# lit

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  init.ps1  shell.nix
archive/playground/: application.cpp  application.h  main.cpp  probe_manager.cpp  probe_manager.h  viewport.cpp  viewport.h
archive/playground/panels/: graph_panel.h  inspector_panel.h
docs/: data-model.txt  engineering-patterns.txt  ideas.txt  manifesto.txt  roadmap.txt
src/: Engine.cpp  Engine.h  LitCore.h  Node.h  main.cpp
src/Nodes/: ComputeNode.cpp  ComputeNode.h  VisualizerNode.cpp  VisualizerNode.h
src/experiments/01_compute_sine_field/: README.md  main.cpp
src/experiments/02_fixture_sampling/: README.md  main.cpp
src/experiments/03_multi_channel_output/: README.md  main.cpp
src/experiments/04_visual_overlay/: README.md  main.cpp
src/experiments/05_connected_sampling/: README.md  main.cpp
src/experiments/06_diagonal_sweep/: README.md  main.cpp
src/substrate/: builtins.h  demo_patch.h  fixture.h  graph.h  node.h  socket.h  substrate.cpp  substrate.h  value.h
src/view/: main.cpp
tests/: test_substrate.cpp
